<resources>
    <string name="app_name">WannaKnowWeather</string>
    <string name="celsius">°C</string>
    <string name="celsius_sign">°</string>
    <string name="wind_speed_metric">m/s</string>
    <string name="_7_day_forecast">7-day forecast</string>
    <string name="connect_info">No internet connection</string>
    <string name="enter_location">Enter location</string>
    <string name="location">location</string>
    <string name="first_search">Enter the exact name of the location on any language</string>
    <string name="empty_location">Grant the location permission or choose a location</string>
    <string name="allow_location">"Allow location permission for define your location"</string>
    <string name="today_s_details">Today\'s details</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="humidity">Humidity</string>
    <string name="feelslike">FeelsLike</string>
    <string name="pressure">Pressure</string>

</resources>