<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.currentweather.CurrentWeatherFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/big_space">

            <TextView
                android:id="@+id/tv_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:paddingHorizontal="@dimen/big_space"
                android:text="@string/empty_location"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/pb_loading"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_hourly_forecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/big_space"
                android:orientation="horizontal"
                android:padding="@dimen/main_space"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/hourly_forecast_item" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/b_to_7day_forecast"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="@dimen/big_space"
                android:layout_marginVertical="@dimen/big_space"
                android:text="@string/_7_day_forecast"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_hourly_forecast"
                tools:visibility="visible" />

            <include
                android:id="@+id/details"
                layout="@layout/details_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctb_collaps_tb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimaryVariant"
            android:fitsSystemWindows="true"
            app:collapsedTitleGravity="start"
            app:contentScrim="?attr/colorPrimaryVariant"
            app:expandedTitleGravity="top|center"
            app:expandedTitleMarginEnd="8dp"
            app:expandedTitleMarginStart="8dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:scrimVisibleHeightTrigger="150dp"
            tools:title="Moscow">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:layout_collapseMode="pin">

                <TextView
                    android:id="@+id/tv_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/big_temp_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="34" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_temp"
                    tools:text="Cloudy" />

                <TextView
                    android:id="@+id/tv_celsius_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@+id/tv_temp"
                    app:layout_constraintTop_toTopOf="@+id/tv_temp"
                    tools:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tb_current"
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                app:layout_collapseMode="pin"
                app:menu="@menu/tool_bar_menu"
                app:navigationIcon="@drawable/ic_search"
                tools:title="Moscow" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>